@@ -1,5 +1,6 @@
 package io.poc.client.pocclient.contract;
 
+import io.poc.client.pocclient.bean.GreeterParam;
 import lombok.RequiredArgsConstructor;
 import lombok.SneakyThrows;
 import org.springframework.stereotype.Service;
@@ -11,10 +12,15 @@ import org.web3j.abi.datatypes.Type;
 import org.web3j.abi.datatypes.Uint;
 import org.web3j.abi.datatypes.Utf8String;
 import org.web3j.crypto.Credentials;
+import org.web3j.crypto.RawTransaction;
+import org.web3j.crypto.TransactionEncoder;
 import org.web3j.protocol.Web3j;
 import org.web3j.protocol.core.DefaultBlockParameterName;
 import org.web3j.protocol.core.methods.request.Transaction;
 import org.web3j.protocol.core.methods.response.EthCall;
+import org.web3j.protocol.core.methods.response.EthSendTransaction;
+import org.web3j.tx.Contract;
+import org.web3j.utils.Numeric;
 
 import java.math.BigInteger;
 import java.util.Arrays;
@@ -31,51 +37,49 @@ public class GreeterContract {
     private final static String CONTRACT_ADDRESS = "0x5fbdb2315678afecb367f032d93f642f64180aa3";
 
     /**
-     * 要发送交易的账户地址和私钥
-     *
-     * @param fromAddress
-     * @param privateKey
+     * 调用只读合约
      */
     @SneakyThrows
-    public Object get(String fun, String fromAddress) {
+    public Object get(GreeterParam param) {
         // 要传递给合约函数的参数
         List<Type> inputParameters = List.of();
-        List<TypeReference<?>> outputParameters = List.of(new TypeReference<Utf8String>(){});
+        List<TypeReference<?>> outputParameters = List.of(new TypeReference<Utf8String>() {
+        });
         // 创建合约函数对象
-        Function function = new Function(fun, inputParameters, outputParameters);
+        Function function = new Function(param.getFunction(), inputParameters, outputParameters);
         // 将函数编码为字节数组
         String encodedFunction = FunctionEncoder.encode(function);
-        Transaction transaction = Transaction.createEthCallTransaction(fromAddress, CONTRACT_ADDRESS, encodedFunction);
+        Transaction transaction = Transaction.createEthCallTransaction(param.getAddress(), CONTRACT_ADDRESS, encodedFunction);
         EthCall ethCall = web3j.ethCall(transaction, DefaultBlockParameterName.LATEST).send();
         var results = FunctionReturnDecoder.decode(ethCall.getValue(), function.getOutputParameters());
         return results.get(0).getValue();
     }
 
     /**
-     * 要发送交易的账户地址和私钥
-     *
-     * @param fromAddress
-     * @param privateKey
+     * 修改合约
      */
     @SneakyThrows
-    public Object set(String fun, String fromAddress, String privateKey, String newValue) {
-
+    public String set(GreeterParam param) {
         // 要传递给合约函数的参数
-        List<Type> inputParameters = Arrays.asList(new Uint(BigInteger.ONE));
-
+        List<Type> inputParameters = Arrays.asList(new Utf8String(param.getNewValue()));
+        List<TypeReference<?>> outputParameters = List.of();
         // 创建合约函数对象
-        Function function = new Function(fun, inputParameters, Arrays.asList());
-
+        Function function = new Function(param.getFunction(), inputParameters, outputParameters);
         // 将函数编码为字节数组
         String encodedFunction = FunctionEncoder.encode(function);
 
-        // 使用私钥创建凭据
-        Credentials credentials = Credentials.create(privateKey);
+        BigInteger nonce = web3j.ethGetTransactionCount(param.getAddress(), DefaultBlockParameterName.LATEST).send().getTransactionCount();       //获取nonce
+        BigInteger gasPrice = web3j.ethGasPrice().send().getGasPrice();     //gas数
+        BigInteger gasLimit = Contract.GAS_LIMIT;                           //限制gas数
 
-        Transaction transaction = Transaction.createEthCallTransaction(fromAddress, CONTRACT_ADDRESS, encodedFunction);
-        EthCall ethCall = web3j.ethCall(transaction, DefaultBlockParameterName.LATEST).sendAsync().get();
-        var results = FunctionReturnDecoder.decode(ethCall.getValue(), function.getOutputParameters());
-        return results.get(0).getValue();
+        RawTransaction rawTransaction = RawTransaction.createTransaction(nonce, gasPrice, gasLimit, CONTRACT_ADDRESS, encodedFunction);
+
+        Credentials credentials = Credentials.create(param.getPrivateKey());
+        byte[] signMessage = TransactionEncoder.signMessage(rawTransaction, credentials);
+        String hexValue = Numeric.toHexString(signMessage);
+        EthSendTransaction ethResult = web3j.ethSendRawTransaction(hexValue).sendAsync().get();
+        // 交易编号
+        return ethResult.getTransactionHash();
     }
 
 }
